--- a/UI/Views/Home/AddBlood.cshtml
+++ b/UI/Views/Home/AddBlood.cshtml
@@ -1,79 +1,71 @@
-﻿@{
-	ViewData["Title"] = "Add Blood";
+﻿@using Api.Models
+
+@{
+    ViewData["Title"] = "Add Blood";
+    var branch = ViewData["Branch"] as BranchDto;
 }
-<head>
-    <!-- Add these script tags to include jQuery and jQuery UI -->
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
-</head>
 
 <div class="row">
-	<div class="col-md-4">
-		<h2>@ViewData["Title"]</h2>
-	</div>
-	<div class="col-md-4">
-		<h3>Branch Name</h3>
-	</div>
+    <div class="col-md-4">
+        <h2>@ViewData["Title"]</h2>
+    </div>
+    <div class="col-md-4">
+        <h3>@branch?.Name</h3>
+    </div>
 </div>
 
 <form>
-    @Html.AntiForgeryToken()
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="form-group">
-                <label class="control-label col-md-4">Donor Name</label> 
+                <label class="control-label">Donor Name</label>
+                <select id="donorSelect" class="form-control form-select"></select>
             </div>
-        </div>
-        <div class="col-md-4">                             
-            <input class="form-control" id="donorName" />
-        </div>            
-    </div> 
-    <div class="row">
-        <div class="col-md-4">
             <div class="form-group">
-                <label class="control-label col-md-4">Blood Type</label>
+                <label class="control-label">Blood Type</label>
+                <input disabled id="bloodType" class="form-control" />
             </div>
-        </div>
-        <div class="col-md-4">
-            <input class="form-control" />
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-4">
             <div class="form-group">
-                <label class="control-label col-md-4">Donation Date</label>
+                <label class="control-label">Donation Date</label>
+                <div>@DateTime.Now.ToString("dd.MM.yyyy HH:mm")</div>
             </div>
-        </div>
-        <div class="col-md-4">  
-            <input class="form-control" />
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-4">
             <div class="form-group">
-                <label class="control-label col-md-4">Units</label>
+                <label class="control-label">Units</label>
+                <input disabled id="unitsInput" class="form-control" />
             </div>
-        </div>
-        <div class="col-md-4">
-            <input class="form-control" />
         </div>
     </div>
 </form>
 
-<script>
-    $.ajax({
-        url: 'api/Donors', // Replace with your actual endpoint
-        method: 'GET',
-        success: function (data) {            
-            $("#donorName").autocomplete({
-                source: data,
-                minLength: 1,
-            });
-        },
-        error: function (error) {
-            console.error('Error fetching donor names:', error);
-        }
-    });
-</script>
 
+@section scripts {
+	<script>
+		$(document).ready(function () {
+
+			$('#donorSelect').select2({
+				minimumInputLength: 1,
+				ajax: {
+					url: '/api/search/donorsbyname',
+					processResults: function (data) {
+						var d = $.map(data, function (obj) {
+							obj.text = obj.name;
+							return obj;
+						});
+						return {
+							results: d
+						};
+					}
+				}
+			});
+
+			$('#donorSelect').on('select2:select', function (e) {
+				var data = e.params.data;
+				$('#bloodType').val(data.bloodType);
+
+			});
+			
+		});
+
+	</script>
+
+}
