--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="CreateDonor"></a>
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="RequestBlood"></a>
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="ListDonors"></a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="AddBlood"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
