--- a/UI/Views/Home/CreateDonor.cshtml
+++ b/UI/Views/Home/CreateDonor.cshtml
@@ -18,7 +18,7 @@
 	<div class="row">
 		@if (!string.IsNullOrEmpty(imgUrl))
 		{
-			<img src="@imgUrl" width="30"/>
+			<img src="@imgUrl"/>
 		}
 		<!-- View -->
 		<div class="form-group">
