--- a/UI/Views/Home/ListDonors.cshtml
+++ b/UI/Views/Home/ListDonors.cshtml
@@ -35,3 +35,98 @@
         </tbody>
     </table>
 </form>
+
+<div class="row">
+    <div class="col-12">
+        <!-- Basic Pagination -->
+        <ul class="pagination pagination-lg justify-content-center" id="pagination"></ul>
+        <!--/ Basic Pagination -->
+    </div>
+</div>
+
+<script>
+    // Please see documentation at https://learn.microsoft.com/aspnet/core/client-side/bundling-and-minification
+    // for details on configuring this project to bundle and minify static web assets.
+
+    // Write your JavaScript code.
+    // Object to store the pagination request parameters
+    var pageRequest = {
+        page: 0,
+        pageSize: 2,
+    };
+
+    // Function to execute when the document is ready
+    $(document).ready(function () {
+        sendRequest();
+    });
+
+    // Event listener for pagination links
+    $('#pagination').on('click', 'a.page-link', function (e) {
+        e.preventDefault();
+        var page = parseInt($(this).text(), 10) - 1;
+        changePage(page);
+    });
+
+    // Function to send an AJAX request to fetch data based on the current pageRequest
+    // Function to execute when the document is ready
+    // Function to execute when the document is ready
+    function sendRequest() {
+        $.ajax({
+            url: '/Home/ListDonors', // Change this to your correct endpoint
+            type: 'GET',  // Change to GET method
+            data: pageRequest,
+            success: function (response) {
+                pageRequest.page = response.successData.index;
+                pageRequest.pageSize = response.successData.size;
+                addDataToPaginate(response.successData);
+                addDataToTable(response.successData.items);
+            },
+            error: function (error) {
+                console.log(error);
+            }
+        });
+    }
+
+
+    // Function to change the current page and send a new request
+    function changePage(page) {
+        pageRequest.page = page;
+        sendRequest();
+    }
+
+    // Function to generate the pagination HTML and update the pagination container
+    function addDataToPaginate(data) {
+        var index = data.index;
+        var size = data.size;
+        var count = data.count;
+        var pages = data.pages;
+        var hasPrevious = data.hasPrevious;
+        var hasNext = data.hasNext;
+
+        var paginationHtml = '<ul class="pagination pagination-lg justify-content-center" id="pagination">';
+
+        // Previous button
+        if (hasPrevious) {
+            paginationHtml += '<li class="page-item prev"><a class="page-link" href="javascript:void(0);" onclick="changePage(' + (index - 1) + ')"><i class="tf-icon bx bx-chevron-left"></i></a></li>';
+        } else {
+            paginationHtml += '<li class="page-item prev disabled"><a class="page-link" href="javascript:void(0);"><i class="tf-icon bx bx-chevron-left"></i></a></li>';
+        }
+
+        // Single number
+        paginationHtml += '<li class="page-item active"><a class="page-link" href="javascript:void(0);">' + (index + 1) + '</a></li>';
+
+        // Next button
+        if (hasNext) {
+            paginationHtml += '<li class="page-item next"><a class="page-link" href="javascript:void(0);" onclick="changePage(' + (index + 1) + ')"><i class="tf-icon bx bx-chevron-right"></i></a></li>';
+        } else {
+            paginationHtml += '<li class="page-item next disabled"><a class="page-link" href="javascript:void(0);"><i class="tf-icon bx bx-chevron-right"></i></a></li>';
+        }
+
+        paginationHtml += '</ul>';
+
+        // Set the generated pagination HTML
+        var paginationContainer = document.getElementById("pagination");
+        paginationContainer.innerHTML = paginationHtml;
+    }
+</script>
+
